README: add clarifications to questions raised by people

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 This directory holds various Etched Pixels model railway projects that I'm
 releasing under non-commercial licenses as I wind the business down.
 
-Unless otherwise indicated in the licencing files with the specific module
+Unless otherwise indicated in the licensing files with the specific module
 these files are licensed CC-NC-BY-SA 4.0
 
 https://creativecommons.org/licenses/by-nc-sa/4.0/
@@ -13,3 +13,22 @@ out.
 Note that these files are provided without warranty. Also some of them that
 were never released as products have not really been tested beyond some initial
 prints.
+
+For the CC-SA requirement please identify the models and files as "Designed by
+Alan Cox" or if modified "Based upon a design by Alan Cox".
+
+It is the intention of the rights holder that this license controls the
+modification and printing of the model, not further activities and changes made
+post printing.
+
+If for example you wish to offer services completing, detailing, decorating
+and finishing models produced from these prints as a commercial service it is
+not the intention of this licence to prevent you from doing so providing that
+either
+
+- The customer provides the printed model
+- The customer has free access to the files needed to print the model but
+  chooses to let you print it, and for the printing of the model you charge
+  no more than the actual cost. (What you charge for services beyond that
+  is your own business)
+
